--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
 		<div class="drag-zone__node" draggable="true">2</div>
 		<div class="drag-zone__node" draggable="true">3</div>
 		<div class="drag-zone__node" draggable="true">4</div>
-<!--		<div class="drag-zone__branches">-->
-<!--			<div class="drag-zone__branch" data-js="dropZone">-->
-<!--				<div class="drag-zone__node" draggable="true">8</div>-->
-<!--				<div class="drag-zone__node" draggable="true">7</div>-->
-<!--			</div>-->
-<!--			<div class="drag-zone__branch" data-js="dropZone">-->
-<!--				<div class="drag-zone__node" draggable="true">10</div>-->
-<!--				<div class="drag-zone__node" draggable="true">11</div>-->
-<!--			</div>-->
-<!--		</div>-->
+		<div class="drag-zone__branches">
+			<div class="drag-zone__branch" data-js="dropZone">
+				<div class="drag-zone__node" draggable="true">8</div>
+				<div class="drag-zone__node" draggable="true">7</div>
+			</div>
+			<div class="drag-zone__branch" data-js="dropZone">
+				<div class="drag-zone__node" draggable="true">10</div>
+				<div class="drag-zone__node" draggable="true">11</div>
+			</div>
+		</div>
 		<div class="drag-zone__node" draggable="true">sup</div>
 	</div>
 </section>
